tests/baselines/reference/typeAssertionExpressionInJsNoCrash.errors.txt
tests/cases/compiler/index.js(2,18): error TS2352: Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
tests/cases/compiler/index.js(2,18): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/compiler/index.js(2,18): error TS8016: Type assertion expressions can only be used in TypeScript files.


==== tests/cases/compiler/index.js (3 errors) ====
    const x = "oops";
    const y = delete <number> x;
                     ~~~~~~~~~~
!!! error TS2352: Conversion of type 'string' to type 'number' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
                     ~~~~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
                     ~~~~~~~~~~
!!! error TS8016: Type assertion expressions can only be used in TypeScript files.
    